package com.barbershop.backend.domain.model.enums;

public enum AppointmentStatus {
    SCHEDULED,
    CONFIRMED,
    COMPLETED,
    CANCELLED,
    RUNNING;

}
