package com.barbershop.backend.domain.model.enums;

public enum Role {
    ROLE_ADMIN,
    ROLE_CUSTOMER,
    ROLE_BARBER
}
