@startuml
skinparam classAttributeIconSize 0

abstract class User {
  - UUID id
  - String fullName
  - String email
  - String password
  - String phoneNumber
  - Role role
  - boolean active
  - LocalDateTime createdAt
  - LocalDateTime updateAt
}

class Customer {
  + Customer()
  + Customer(String, String, String, String, boolean, Role)
}

class Barber {
  + Barber()
  + Barber(String, String, String, String, boolean, Role)
}

class Admin {
  + Admin()
  + Admin(String, String, String, String, boolean, Role)
  + Admin(String, String, String, String)
}

class ServiceItem {
  - Long id
  - String name
  - String description
  - BigDecimal price
  - int durationInMinutes
  - boolean active
  - LocalDateTime createdAt
  - LocalDateTime updateAt
  + ServiceItem()
  + ServiceItem(String, String, BigDecimal, Integer, boolean)
}

class Appointment {
  - UUID id
  - Customer customer
  - Barber barber
  - ServiceItem serviceItem
  - LocalDateTime startTime
  - LocalDateTime endTime
  - AppointmentStatus status
  - Long version
  - LocalDateTime createdAt
  - LocalDateTime updateAt
  + Appointment()
  + Appointment(Customer, Barber, ServiceItem, LocalDateTime)
}

class BusinessHours {
  - Integer dayOfWeek
  - String dayName
  - boolean open
  - String openTime
  - String closeTime
  + BusinessHours()
  + BusinessHours(Integer, String, boolean, String, String)
}

enum Role {
  ROLE_ADMIN
  ROLE_CUSTOMER
  ROLE_BARBER
}

enum AppointmentStatus {
  SCHEDULED
  CONFIRMED
  COMPLETED
  CANCELLED
  RUNNING
}

User <|-- Customer
User <|-- Barber
User <|-- Admin
User -right-> Role
Appointment --> Customer
Appointment --> Barber
Appointment --> ServiceItem
Appointment --> AppointmentStatus
@enduml